Implement custom dialog

--- a/android/java/res/values/brave_dimens.xml
+++ b/android/java/res/values/brave_dimens.xml
@@ -43,6 +43,7 @@
 
     <dimen name="default_regular">14sp</dimen>
     <dimen name="large_regular">16sp</dimen>
+    <dimen name="large_semibold">16sp</dimen>
     <dimen name="default_semibold">14sp</dimen>
     <dimen name="small_regular">12sp</dimen>
     <dimen name="x_small_semibold">11sp</dimen>
