Implement unlock backup screen

--- a/android/java/res/layout/fragment_unlock_wallet.xml
+++ b/android/java/res/layout/fragment_unlock_wallet.xml
@@ -58,6 +58,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_unlock"
         style="@style/BraveWalletOnboardingButton"
+        android:enabled="false"
         android:layout_width="match_parent"
         android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="16dp"
@@ -82,17 +83,16 @@
 
     <ImageView
         android:id="@+id/biometric_unlock_wallet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_biometric_login"
         android:foreground="?android:attr/selectableItemBackground"
-        android:background="@drawable/wallet_hollow_button_background"
         android:clickable="true"
         android:focusable="true"
-        android:contentDescription="@null"
+        android:contentDescription="@string/accessibility_biometric_unlock"
         android:visibility="gone"/>
 
 </LinearLayout>
