Implement unlock backup screen

--- a/android/java/res/layout/fragment_verify_recovery_phrase.xml
+++ b/android/java/res/layout/fragment_verify_recovery_phrase.xml
@@ -80,6 +80,7 @@
             android:layout_marginBottom="16dp">
 
             <com.google.android.material.textfield.TextInputEditText
+                style="@style/BraveWalletInputEditText"
                 android:id="@+id/text_input_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
