--- a/android/java/res/layout/fragment_unlock_wallet.xml
+++ b/android/java/res/layout/fragment_unlock_wallet.xml
@@ -89,7 +89,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
         android:src="@drawable/ic_biometric_login"
-        android:foreground="?android:attr/selectableItemBackground"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:clickable="true"
         android:focusable="true"
         android:contentDescription="@string/accessibility_biometric_unlock"
