[Rewards 3.0] Improve overflow handling for dialogs

--- a/components/brave_rewards/resources/rewards_page/rewards_page.html
+++ b/components/brave_rewards/resources/rewards_page/rewards_page.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Brave Rewards</title>
-  <link rel="shortcut icon" href="chrome://rewards/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="chrome://resources/brave/css/reset.css" blocking="render" >
   <link rel="stylesheet" href="chrome://resources/brave/fonts/poppins.css" blocking="render" >
   <link rel="stylesheet" href="chrome://resources/brave/fonts/inter.css" blocking="render" >
@@ -17,7 +17,7 @@
     }
     @media (prefers-color-scheme: dark) {
       html {
-        background: #0F0663;
+        background: rgb(13, 18, 20);
       }
     }
   </style>
