[Audit Tokens]: Fix tokens audit failure

--- a/components/ai_chat/resources/page/components/copy_button/style.module.scss
+++ b/components/ai_chat/resources/page/components/copy_button/style.module.scss
@@ -4,7 +4,7 @@
 // you can obtain one at https://mozilla.org/MPL/2.0/.
 
 .copyButton {
-  color: var(--leo-color-gray-30);
+  color: var(--leo-color-neutral-30);
 }
 
 .copyButtonActive {
