--- a/components/ai_chat/resources/page/components/edit_button/style.module.scss
+++ b/components/ai_chat/resources/page/components/edit_button/style.module.scss
@@ -4,6 +4,6 @@
 // you can obtain one at https://mozilla.org/MPL/2.0/.
 
 .editButton {
-  color: var(--leo-color-gray-30);
+  color: var(--leo-color-neutral-30);
 }
 
