--- a/components/brave_new_tab_ui/brave_new_tab.html
+++ b/components/brave_new_tab_ui/brave_new_tab.html
@@ -26,13 +26,13 @@
   }
 
   ::-webkit-scrollbar-thumb {
-      background: var(--leo-color-gray-40);
+      background: var(--leo-color-neutral-40);
       border-radius: var(--leo-spacing-m);
   }
 
   @media (prefers-color-scheme: dark) {
     ::-webkit-scrollbar-thumb {
-      background: var(--leo-color-gray-20);
+      background: var(--leo-color-neutral-20);
     }
   }
 </style>
