--- a/components/ai_chat/resources/page/components/main/style.module.scss
+++ b/components/ai_chat/resources/page/components/main/style.module.scss
@@ -37,7 +37,7 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background: var(--leo-color-gray-20);
+    background: var(--leo-color-neutral-20);
     border-radius: var(--leo-spacing-m);
   }
 }
