--- a/android/java/res/layout/fragment_restore_wallet.xml
+++ b/android/java/res/layout/fragment_restore_wallet.xml
@@ -1,128 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical"
-    android:background="@color/wallet_bg"
+    android:background="@color/container_background"
     android:fadeScrollbars="false"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:scrollbars="vertical">
 
     <LinearLayout
-        android:animateLayoutChanges="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/restore_title"
+            style="@style/HeadingH3"
+            android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="18dp"
             android:text="@string/restore_crypto_account"
-            android:textColor="@color/wallet_text_color"
-            android:textSize="18sp"/>
+            android:textColor="@color/text_primary"
+            android:textStyle="bold" />
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:id="@+id/restore_subtitle"
+            style="@style/DefaultRegular"
             android:gravity="center_horizontal"
-            android:layout_marginStart="64dp"
-            android:layout_marginEnd="64dp"
-            android:layout_marginBottom="24dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="40dp"
             android:text="@string/restore_crypto_text"
-            android:textColor="@color/wallet_secondary_text_color"
-            android:textSize="14sp"/>
+            android:textColor="@color/text_secondary" />
 
-        <EditText
-            android:id="@+id/recovery_phrase_text"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginStart="48dp"
-            android:layout_marginEnd="48dp"
-            android:gravity="top"
-            android:layout_gravity="center_vertical"
-            android:layout_marginBottom="8dp"
-            android:background="@drawable/rounded_wallet_edittext"
-            android:hint="@string/enter_recovery_phrase"
-            android:importantForAutofill="no"
-            android:inputType="textPassword|textMultiLine"
-            android:paddingEnd="18dp"
-            android:paddingStart="18dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:textCursorDrawable="@null"
-            android:textSize="14sp"
-            android:textColor="@color/wallet_text_color"
-            android:textColorHint="@color/brave_theme_hint_text" />
 
-        <android.widget.CheckBox
-            android:id="@+id/restore_legacy_wallet_checkbox"
+
+        <GridLayout
+            android:id="@+id/recovery_phrase_12"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
-            android:layout_marginEnd="48dp"
-            android:layout_gravity="center_horizontal"
-            android:buttonTint="@color/brave_action_color"
-            android:paddingVertical="8dp"
-            android:visibility="gone"
-            android:textColor="@color/wallet_secondary_text_color"
-            android:text="@string/restore_legacy_wallet_recovery_phrase"/>
+            android:layout_marginHorizontal="12dp"
+            android:columnCount="3"
+            android:rowCount="4" />
 
-        <LinearLayout
+        <GridLayout
+            android:id="@+id/recovery_phrase_24"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
-            android:layout_marginEnd="48dp"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:layout_marginHorizontal="12dp"
+            android:columnCount="3"
+            android:rowCount="4" />
 
-            <android.widget.CheckBox
-                android:id="@+id/restore_wallet_checkbox"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:layout_marginEnd="16dp"
-                android:layout_gravity="center_horizontal"
-                android:buttonTint="@color/brave_action_color"
-                android:textColor="@color/wallet_secondary_text_color"
-                android:text="@string/show_recovery_phrase"/>
-
-            <ImageView
-                android:id="@+id/restore_wallet_copy_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="8dp"
-                app:srcCompat="@drawable/ic_copy"
-                android:contentDescription="@string/accessibility_restore_wallet_copy_image"
-                android:background="?android:attr/selectableItemBackground"
-                android:layout_gravity="center_horizontal"
-                android:clickable="true"
-                android:focusable="true"/>
-        </LinearLayout>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_restore_wallet"
+        <ImageView
+            android:layout_gravity="end"
+            android:layout_marginTop="20dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:padding="4dp"
+            android:id="@+id/toggle_word_mask"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center"
-            android:background="@drawable/crypto_wallet_blue_button"
-            android:text="@string/restore"
-            android:textAllCaps="false"
+            android:contentDescription="@null"
+            android:layout_marginEnd="24dp"
+            android:src="@drawable/ic_eye_on"/>
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <com.google.android.material.checkbox.MaterialCheckBox
+            android:id="@+id/legacy_import"
+            android:visibility="invisible"
+            style="@style/BraveWalletCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="16dp"
+            android:paddingHorizontal="8dp"
+            android:layout_gravity="center"
             android:textSize="16sp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp"
-            android:layout_marginBottom="8dp"
-            android:textColor="@android:color/white"
-            style="?android:attr/borderlessButtonStyle"/>
+            android:textStyle="bold"
+            android:text="@string/restore_legacy_wallet_recovery_phrase"
+            android:textColor="@color/text_interactive" />
+
+
+        <TextView
+            android:id="@+id/recovery_phrase_switch"
+            style="@style/DefaultRegular"
+            android:layout_gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="32dp"
+            android:background="?android:attr/selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="@string/recovery_phrase_24"
+            android:textColor="@color/text_interactive"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/continue_button"
+            style="@style/BraveWalletOnboardingButton"
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginBottom="40dp"
+            android:enabled="false"
+            android:gravity="center"
+            android:text="@string/continue_text" />
 
     </LinearLayout>
-
 </androidx.core.widget.NestedScrollView>
