--- a/android/java/res/layout/fragment_onboarding_network_selection.xml
+++ b/android/java/res/layout/fragment_onboarding_network_selection.xml
@@ -40,6 +40,7 @@
             android:textColor="@color/text_secondary" />
 
         <com.google.android.material.textfield.TextInputLayout
+            android:theme="@style/BraveWalletEditTextTheme"
             style="@style/BraveWalletInputLayout"
             android:id="@+id/network_search_layout"
             android:layout_width="match_parent"
