--- a/android/java/res/layout/fragment_onboarding_network_selection.xml
+++ b/android/java/res/layout/fragment_onboarding_network_selection.xml
@@ -8,8 +8,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/setup_wallet_root"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:theme="@style/BraveWalletOnboarding">
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/supported_networks"
