Fix bold styles

--- a/android/java/res/layout/dialog_skip_onboarding.xml
+++ b/android/java/res/layout/dialog_skip_onboarding.xml
@@ -10,11 +10,10 @@
     android:orientation="vertical">
 
     <TextView
-        style="@style/LargeSemibold"
+        style="@style/LargeBold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:textStyle="bold"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="56dp"
         android:layout_marginBottom="32dp"
@@ -33,7 +32,7 @@
 
     <TextView
         android:id="@+id/skip"
-        style="@style/DefaultRegular"
+        style="@style/DefaultBold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -45,7 +44,6 @@
         android:focusable="true"
         android:padding="16dp"
         android:text="@string/backup_later"
-        android:textStyle="bold"
         android:textSize="16sp"
         android:textColor="@color/text_secondary" />
 </LinearLayout>
