--- a/android/java/res/layout/fragment_backup_wallet.xml
+++ b/android/java/res/layout/fragment_backup_wallet.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <TextView
-            style="@style/HeadingH3"
+            style="@style/HeadingH3Bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
@@ -21,8 +21,7 @@
             android:layout_marginBottom="18dp"
             android:gravity="center_horizontal"
             android:text="@string/enter_password_to_continue_title"
-            android:textColor="@color/text_primary"
-            android:textStyle="bold" />
+            android:textColor="@color/text_primary" />
 
         <TextView
             style="@style/DefaultRegular"
