--- a/android/java/res/layout/fragment_secure_password.xml
+++ b/android/java/res/layout/fragment_secure_password.xml
@@ -15,7 +15,7 @@
         android:orientation="vertical">
 
         <TextView
-            style="@style/HeadingH3"
+            style="@style/HeadingH3Bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
@@ -23,8 +23,7 @@
             android:layout_marginTop="14dp"
             android:layout_marginBottom="18dp"
             android:text="@string/create_password"
-            android:textColor="@color/wallet_text_color"
-            android:textStyle="bold" />
+            android:textColor="@color/wallet_text_color" />
 
         <TextView
             style="@style/DefaultRegular"
