--- a/android/java/res/values/brave_styles.xml
+++ b/android/java/res/values/brave_styles.xml
@@ -362,6 +362,10 @@
         <item name="fontWeight">400</item>
     </style>
 
+    <style name="DefaultBold" parent="DefaultRegular">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="SmallRegular">
         <item name="android:textSize">@dimen/small_regular</item>
         <item name="lineHeight">16sp</item>
@@ -398,6 +402,10 @@
         <item name="fontWeight">600</item>
     </style>
 
+    <style name="LargeBold" parent="LargeSemibold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="DefaultSemibold">
         <!-- Default Brave UI size -->
         <item name="android:textSize">@dimen/default_semibold</item>
@@ -413,6 +421,10 @@
         <item name="fontWeight">600</item>
     </style>
 
+    <style name="XSmallBold" parent="XSmallSemibold">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="HeadingH1">
         <item name="android:textSize">@dimen/heading_h1</item>
         <item name="lineHeight">40sp</item>
@@ -420,11 +432,19 @@
         <item name="fontWeight">500</item>
     </style>
 
+    <style name="HeadingH1Bold" parent="HeadingH1">
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="HeadingH3">
         <item name="android:textSize">@dimen/heading_h3</item>
         <item name="lineHeight">28sp</item>
         <item name="fontStyle">normal</item>
         <item name="fontWeight">500</item>
+    </style>
+
+    <style name="HeadingH3Bold" parent="HeadingH3">
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="HeadingH4">
